--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Panda Commarce</title>
 
+    <!-- custom styles -->
+    <link rel="stylesheet" href="cascading style sheet/style.css">
+
     
 </head>
 <body>
@@ -47,14 +50,14 @@
                 <div class="carousel-inner">
                   <div class="carousel-item  active">
 
-                    <div class="row p-5 d-flex align-items-center bg-info bg-gradient">
+                    <div class="row p-5 d-flex align-items-center info-background bg-gradient">
                         <div class="col-lg-7">
                              <h1>Cool Dude Headphone</h1>
                         <p>
                             This is the best headphone in the world for peaople who just want to waste time in front of funky world
                         </p>
                         <h1>$420</h1>
-                        <button class="btn btn-warning">
+                        <button class="panda-btn-btn-buy-now">
                             Buy Now
                         </button>
                         </div>
@@ -66,14 +69,14 @@
                   
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 d-flex align-items-center bg-info bg-gradient">
+                    <div class="row p-5 d-flex align-items-center info-background bg-gradient">
                         <div class="col-lg-7">
                              <h1>Mega LCD TV for sports</h1>
                         <p>
                             This is the best headphone in the world for peaople who just want to waste time in front of funky world
                         </p>
                         <h1>$420</h1>
-                        <button class="btn btn-warning">
+                        <button class="panda-btn-btn-buy-now">
                             Buy Now
                         </button>
                         </div>
@@ -83,14 +86,14 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 d-flex align-items-center bg-info bg-gradient">
+                    <div class="row p-5 d-flex align-items-center info-background bg-gradient">
                         <div class="col-lg-7">
                              <h1>X-box for you living room</h1>
                         <p>
                             This is the best headphone in the world for peaople who just want to waste time in front of funky world
                         </p>
                         <h1>$600</h1>
-                        <button class="btn btn-warning">
+                        <button class="panda-btn-btn-buy-now">
                             Buy Now
                         </button>
                         </div>
@@ -115,7 +118,7 @@
     <main>
 
         <!-- catagories -->
-         <section class="container my-5">
+         <section class="container my-5 categories">
                 <div class="row g-4">
                   <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -152,8 +155,8 @@
                   <h5 class="card-title">Supply 350</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="mg-3" >
-                  <button class=" btn btn-warning">
+                <div class="m-3" >
+                  <button class="panda-btn-btn-buy-now">
                     Buy Now
                   </button>
                 </div>
@@ -167,7 +170,7 @@
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="m-3">
-                 <div class="btn btn-warning">Buy Now</div>
+                 <button class="panda-btn-btn-buy-now">Buy Now</button>
                 </div>
               </div>
             </div>
@@ -179,8 +182,9 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="m-3">
-                 <div class="btn btn-warning">
+                 <button class="panda-btn-btn-buy-now">
                    Buy Now
+                   </button>
                  </div>
                 </div>
               </div>
@@ -200,8 +204,8 @@
                   <h5 class="card-title">Red Laltu Bag</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="mg-3" >
-                  <button class=" btn btn-warning">
+                <div class="m-3" >
+                  <button class="panda-btn-btn-buy-now">
                     Buy Now
                   </button>
                 </div>
@@ -215,7 +219,7 @@
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="m-3">
-                 <div class="btn btn-warning">Buy Now</div>
+                 <button class="panda-btn-btn-buy-now">Buy Now</button>
                 </div>
               </div>
             </div>
@@ -227,9 +231,9 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="m-3">
-                 <div class="btn btn-warning">
+                 <button class="panda-btn-btn-buy-now">
                    Buy Now
-                 </div>
+                 </button>
                 </div>
               </div>
             </div>
@@ -239,13 +243,13 @@
 
          <!-- subscribe -->
 
-         <section style="height:300px" class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+         <section style="height:300px" class="container info-background d-flex justify-content-center align-items-center rounded-3">
           <div>
             <h1>LETS STAY IN TOUCH</h1>
             <p>Get updates on sales,special and more</p>
-            <input type="text" name="" placeholder="YOUR EMAIL" id="">
+            <input class="form-control" type="text" name="" placeholder="YOUR EMAIL" id="">
             <br>
-            <button class="btn btn-warning mt-4">SUBMIT</button>
+            <button class="panda-btn-btn-buy-now mt-4">SUBMIT</button>
           </div>
          </section>
     </main>
